added hero section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 
 <body>
-    
+    <!--<header>
+        <h1>PENDING HEADER NAV TAB</h1>
+    </header>-->
+
+    <div class = "hero-section centered">
+        <div class = "container">
+            <h1 class = "hero-heading text-background">Theta Lambda Beta</h1>
+            <div class = "">
+                <p class = "hero-subheading text-background">Strive to be the best, Rise above the rest</p>
+            </div>
+            
+            <div class = "container-block">
+                <button type="button" class = "button" onclick = "location.href='https://google.com';">Sign Up</button>
+                <button type="button" class = "hollow-button all-caps" onclick = "location.href='https://google.com';">Learn More</button>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
