added second section

--- a/index.html
+++ b/index.html
@@ -21,9 +21,42 @@
             </div>
             
             <div class = "container-block">
-                <button type="button" class = "button" onclick = "location.href='https://google.com';">Sign Up</button>
-                <button type="button" class = "hollow-button all-caps" onclick = "location.href='https://google.com';">Learn More</button>
+                <button type="button" class = "button" onclick = "location.href='https://google.com';">Contact Us</button>
+                <button type="button" class = "hollow-button all-caps" onClick="document.getElementById('about-us').scrollIntoView();">Learn More</button>
             </div>
+        </div>
+    </div>
+
+    <div class = "section" id="about-us">
+        <div class = "container">
+            <div class = "section-title">
+                <h2 class="section-heading centered">What we do</h2>
+                <p class="section-subheading center">Our Achievements</p>
+            </div>
+
+            <div class = "columns">
+                <div class = "columns">
+                    <div class="box">
+                        <h1 class = "box-heading">3</h1>
+                        <h3 class = "box-subheading">Fraternity <br>of the year <br> awards</h3>
+                    </div>
+                </div>
+
+                <div class = "columns">
+                    <div class="box">
+                        <h1 class = "box-heading">116</h1>
+                        <h3 class = "box-subheading">Brothers <br>of the<br> fraternity</h3>
+                    </div>
+                </div>
+
+                <div class = "columns">
+                    <div class="box">
+                        <h1 class = "box-heading">$20000+</h1>
+                        <h3 class = "box-subheading">Money raised <br>for<br> philanthropy</h3>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
