switched pillar photos

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         <div class = "container">
             <div class = "section-title">
                 <h2 class="section-heading centered accent">Our Main Pillars</h2>
-                <p class="section-subheading center accent">These pillars represent our core values</p>
+                <p class="section-subheading center accent">A representation of our core values</p>
             </div>
 
             <div class = "columns-container">
                 <div class = "columns">
                     <div class="box transparent">
-                        <img class = "fullWidth-image" src = "photos/thlbHeader.jpg">
+                        <img class = "fullWidth-image" src = "photos/thlbStairs.jpg">
                         <h3 class = "white-text heading">Truth</h3>
                         <p class = "white-text">We, the brothers of Theta Lambda Beta, have faith that we will stay 
                             true and honest with one another.  As brothers, it is important that 
@@ -84,7 +84,7 @@
     
                 <div class = "columns">
                     <div class="box transparent">
-                        <img class = "fullWidth-image" src = "photos/thlbStairs.jpg">
+                        <img class = "fullWidth-image" src = "photos/thlbMicrophone.jpg">
                         <h3 class = "white-text heading">Leadership</h3>
                         <p class = "white-text">We, the brothers of Theta Lambda Beta, will always strive to be the 
                             best, and rise above the rest. As a Fraternity, we maintain a high 
